WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12906
REGRESSION: Canvas is pixelated when the page is opened in a background tab
https://bugs.webkit.org/show_bug.cgi?id=12906
Summary
REGRESSION: Canvas is pixelated when the page is opened in a background tab
mitz
Reported
2007-02-27 04:54:04 PST
To reproduce: Create a new tab and open the URL in that (foreground) tab. In Safari Preferences > Tabs, deselect "select new tabs as they are created", then open the URL in a background tab. After the page is finished loading in the background tab, switch to it. Expected results: The clock should render at 1:1 resolution in the background tab, just like in the foreground tab. Actual results: The clock is pixelated in the tab that loaded in the background (looks like 2:1). Regression: Yes, shipping WebKit renders at full resolution in both tabs.
Attachments
Reduction
(449 bytes, text/html)
2007-02-27 05:27 PST
,
mitz
no flags
Details
Fall back on the main screen's scale factor if the view is not in a window
(1.24 KB, patch)
2007-02-27 05:59 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-02-27 05:27:46 PST
Created
attachment 13393
[details]
Reduction
mitz
Comment 2
2007-02-27 05:59:01 PST
Created
attachment 13396
[details]
Fall back on the main screen's scale factor if the view is not in a window The main screen's scale factor is just a better guess than the undefined result of sending a message to nil. Since canvas does not seem to support dynamic changes to this parameter (as might be necessary when the view moves from one window to another?), you're stuck with the guessed value.
Darin Adler
Comment 3
2007-02-27 06:29:09 PST
Comment on
attachment 13396
[details]
Fall back on the main screen's scale factor if the view is not in a window Looks like the right thing to do. r=me
Alexey Proskuryakov
Comment 4
2007-02-27 10:13:40 PST
Committed revision 19887.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug