2007-02-27  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - http://bugs.webkit.org/show_bug.cgi?id=12906
          REGRESSION: Canvas is pixelated when the page is opened in a background tab

        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::scaleFactor): If the view is not in a window, use the main
        screen's scale factor as a best guess.



Canonical link: https://commits.webkit.org/16724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19887 268f45cc-cd09-0410-ab3c-d52691b4dbfc